Fix tabs alignment & other styles

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -19,7 +19,7 @@
 		@apply lg:hidden inline-flex items-center justify-center ml-auto rounded bg-slate-800 p-2 text-slate-100 hover:bg-slate-700 hover:text-slate-100 focus:outline-none focus:ring-2 focus:ring-slate-100 focus:ring-offset-2 focus:ring-offset-slate-800;
 	}
 	.card-sm {
-		@apply flex flex-col bg-slate-800 rounded-lg px-10 py-8 w-72;
+		@apply flex flex-col bg-slate-800 rounded-lg px-10 py-8 w-72 mt-4 xl:mt-0;
 	}
 
 	.card {
